// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > it works with defaults 1`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 1`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 2`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 3`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-serif_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 4`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-mono_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with sizes 1`] = `
<div
  class="_this_d6c5f6 _size-small_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with sizes 2`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with sizes 3`] = `
<div
  class="_this_d6c5f6 _size-large_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with weights 1`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-regular_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with weights 2`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with weights 3`] = `
<div
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-bold_d6c5f6"
  data-testid="Text"
>
  Hello world
</div>
`;
